--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,15 @@
   --color-primary: #ff6500;
   --color-background: #0b192c;
 }
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-sm: 570px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 990px;
+  --breakpoint-xl: 1170px;
+}
 body {
-  @apply px-6 pt-6 bg-black;
+  @apply bg-black;
 }
 @layer utilities {
   .container {
