--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import "tailwindcss";
 @theme {
   --color-primary: #ff6500;
@@ -12,6 +13,18 @@
 }
 body {
   @apply bg-black;
+  font-family: "Open Sans", sans-serif;
+}
+@layer components {
+  .project-card {
+    @apply relative hover:scale-105 transition-all duration-150 border p-10 border-white hover:border-primary overflow-hidden;
+  }
+  .back {
+    @apply absolute h-full w-full bg-black/70 top-0 left-[-100%] transition-all duration-300 flex items-center justify-center;
+  }
+  .project-card:hover .back {
+    @apply left-0;
+  }
 }
 @layer utilities {
   .container {
@@ -37,6 +50,7 @@ body {
     width: 100%;
     padding: 12px 24px;
     display: flex;
+
     align-items: center;
     justify-content: center;
     transition: top 0.3s ease;
@@ -94,6 +108,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 12px;
+  border-radius: 4px;
   padding: 14px 28px;
   background: linear-gradient(145deg, #0000, #1c1c1c);
   border: 2px solid rgba(255, 255, 255, 0.2);
