--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 @layer components {
   .project-card {
-    @apply relative hover:scale-105 transition-all duration-150 border p-10 border-white hover:border-primary overflow-hidden;
+    @apply relative hover:scale-105 transition-all duration-150 border p-10 border-neutral-800 hover:border-primary overflow-hidden;
   }
   .back {
     @apply absolute h-full w-full bg-black/80 top-0 left-[-100%] transition-all duration-700 flex items-center justify-center;
@@ -120,7 +120,7 @@ body {
   cursor: pointer;
   overflow: hidden;
   transition: all 0.4s ease-in-out;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+  box-shadow: 0 0 20px #ff650030;
   backdrop-filter: blur(8px);
   z-index: 1;
 }
