--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 @layer components {
   .project-card {
-    @apply relative hover:scale-105 transition-all duration-150 border p-10 border-neutral-800 hover:border-primary overflow-hidden;
+    @apply relative hover:scale-105 transition-all duration-150 border p-6 rounded-[8px] bg-neutral-800 hover:border-primary overflow-hidden;
   }
   .back {
     @apply absolute h-full w-full bg-black/80 top-0 left-[-100%] transition-all duration-700 flex items-center justify-center;
@@ -28,7 +28,7 @@ body {
 }
 @layer utilities {
   .container {
-    @apply mx-auto px-5;
+    @apply mx-auto px-6 sm:px-6 md:px-8;
   }
 }
 @layer components {
